tests/fixtures/invalid/int_floordiv_none.py
# Cannot floor divide Int and None
x: int = 1 // None
